fix: make gap a little smaller for laptop

--- a/src/features/products/components/ColorFilter/ColorFilter.module.css
+++ b/src/features/products/components/ColorFilter/ColorFilter.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap: 10px;
 }
 
 .colorLabel {
